# problem-solving

./: My-cp-cheat-sheet.docx  README.md  matrix.txt  ~$-cp-cheat-sheet.docx  ~WRL0003.tmp
codeforces/: CMakeLists.txt  Verify Password.cpp
codeforces/.history/: Verify Password_20240829133840.cpp  password-hash_20240828220044.cpp  password-hash_20240828220051.cpp  password-hash_20240828220053.cpp
codeforces/.history/icpc_mansoura/session4/: A - Max Box REDO_20240910223338.cpp  A - Max Box REDO_20240910223341.cpp  A - Max Box REDO_20240910223343.cpp  A - Max Box REDO_20240910223401.cpp  A - Max Box REDO_20240910223412.cpp  A - Max Box REDO_20240910223414.cpp  A - Max Box REDO_20240910223417.cpp  A - Max Box REDO_20240910223420.cpp  A - Max Box REDO_20240910223422.cpp  A - Max Box REDO_20240910223529.cpp  A - Max Box REDO_20240910223531.cpp  A - Max Box REDO_20240910223535.cpp  A - Max Box REDO_20240910223539.cpp  A - Max Box REDO_20240910223543.cpp  A - Max Box REDO_20240910223546.cpp  A - Max Box REDO_20240910223548.cpp  A - Max Box REDO_20240910223549.cpp  A - Max Box REDO_20240910223553.cpp  A - Max Box REDO_20240910223558.cpp  A - Max Box REDO_20240910223600.cpp  A - Max Box REDO_20240910223612.cpp  A - Max Box REDO_20240910223613.cpp  A - Max Box REDO_20240910223619.cpp  A - Max Box REDO_20240910223621.cpp  A - Max Box REDO_20240910223638.cpp  A - Max Box REDO_20240910223639.cpp  A - Max Box REDO_20240910223654.cpp  A - Max Box REDO_20240910223656.cpp  A - Max Box REDO_20240910223702.cpp  A - Max Box REDO_20240910223705.cpp  A - Max Box REDO_20240910223708.cpp  A - Max Box REDO_20240910223711.cpp  A - Max Box REDO_20240910223717.cpp  A - Max Box REDO_20240910223725.cpp  A - Max Box REDO_20240910223727.cpp  A - Max Box REDO_20240910223731.cpp  A - Max Box REDO_20240910223733.cpp  A - Max Box REDO_20240910223735.cpp  A - Max Box REDO_20240910223739.cpp  A - Max Box REDO_20240910223740.cpp  (+834 more)
codeforces/icpc_mansoura/.history/contest#3/: A-Who is faster_20240815190031.cpp  A-Who is faster_20240815190043.cpp  A-Who is faster_20240815190045.cpp  A-Who is faster_20240815190046.cpp  A-Who is faster_20240815190051.cpp  A-Who is faster_20240815190056.cpp  A-Who is faster_20240815190058.cpp  A-Who is faster_20240815190102.cpp  A-Who is faster_20240815190104.cpp  A-Who is faster_20240815190108.cpp  A-Who is faster_20240815190110.cpp  A-Who is faster_20240815190116.cpp  A-Who is faster_20240815190118.cpp  A-Who is faster_20240815190120.cpp  A-Who is faster_20240815190122.cpp  A-Who is faster_20240815190123.cpp  A-Who is faster_20240815190126.cpp  A-Who is faster_20240815190131.cpp  A-Who is faster_20240815190138.cpp  A-Who is faster_20240815190149.cpp  A-Who is faster_20240815190150.cpp  A-Who is faster_20240815190153.cpp  A-Who is faster_20240815190155.cpp  A-Who is faster_20240815190156.cpp  A-Who is faster_20240815190204.cpp  A-Who is faster_20240815190215.cpp  A-Who is faster_20240815190221.cpp  A-Who is faster_20240815190222.cpp  A-Who is faster_20240815190223.cpp  A-Who is faster_20240815190226.cpp  A-Who is faster_20240815190227.cpp  A-Who is faster_20240815190228.cpp  A-Who is faster_20240815190230.cpp  A-Who is faster_20240815190237.cpp  A-Who is faster_20240815190239.cpp  A-Who is faster_20240815190240.cpp  A-Who is faster_20240815190244.cpp  A-Who is faster_20240815190247.cpp  A-Who is faster_20240815190250.cpp  A-Who is faster_20240815190252.cpp  (+389 more)
codeforces/icpc_mansoura/.history/session3/: J - Three Numbers Sum_20240810111902.cpp  J - Three Numbers Sum_20240810111908.cpp  (+414 more)
codeforces/icpc_mansoura/contest#2/: C - Petya and Strings.cpp  E - A Nice Array.cpp  G - Remove Prefix.cpp  I - Emad vs Joker.cpp
codeforces/icpc_mansoura/ct_0/: A_ Hello World.cpp  B_ Hmmmm.cpp  G - Soldier and Bananas.cpp  H - Triago.cpp
codeforces/icpc_mansoura/ct_1/: H - Count.cpp  L - Colourblindness.cpp  M - Pangram.cpp  N - ICPC balloons.cpp  S - Spy Detected!.cpp  T - Beautiful Matrix.cpp  U - Be Fast 2.cpp  W - Most Similar Words.cpp  Y - Mike and palindrome.cpp
codeforces/icpc_mansoura/session3/: J - Three Numbers Sum.cpp  N - Sort Rectangles.cpp
codeforces/icpc_mansoura/session4/: A- Max Box.cpp  B - Restaurant Costumers.cpp  Challenge-Adhoc-3.cpp  Challenge5-Partial-Sum.cpp  O- Sort String.cpp  commit_push.bat
codeforces/icpc_mansoura/sheet_1/: B - Find.cpp  B_ Hmmmm.cpp  C_ Anton and Danik.cpp  E - karamellaah loves you.cpp  G - Matrix.cpp  I - Mirror.cpp  N - ICPC balloons.cpp  Q - cAPS lOCK.cpp  Z - Elgokers Red Eye.cpp
codeforces/icpc_mansoura/sheet_2/: A - Kindness.cpp  C - Positions.cpp  F - Lowest Number.cpp  I - There is just no time to die.cpp  K - Swap.cpp  O - Is It Frequency.cpp  P - Fibonacci.cpp  R - Way Too Long Words.cpp  X - Life without zeros.cpp  Y - Mike and palindrome.cpp
leetcode/AWS-Prep/: AppsClub - A.cpp  AppsClub - B.cpp  CMakeLists.txt  Day1 - PlusMinus.cpp  L - Colourblindness.cpp  Q - Caps Lock.cpp  S - Spy Detected! .cpp  V - Math challenge2.cpp  W - Most Similar Words .cpp  template.cpp
leetcode/AWS-Prep/.history/: B - Find_20241023224739.cpp  B - Find_20241023224740.cpp  B - Find_20241023224746.cpp  B - Find_20241023224803.cpp  B - Find_20241023230120.cpp  B - Find_20241023230124.cpp  B - Find_20241023230132.cpp  B - Find_20241023230134.cpp  B - Find_20241023230136.cpp  B - Find_20241023230140.cpp  B - Find_20241023230141.cpp  B - Find_20241023230147.cpp  Day1 - minMaxSum_20241024074114.cpp  E - Find in Matrix_20241023225326.cpp  E - Find in Matrix_20241023225327.cpp  E - Find in Matrix_20241023230156.cpp  E - Find in Matrix_20241023230159.cpp
(+1368 files in other folders)
