cmake_minimum_required(VERSION 3.29)
project(AWS_Prep)

set(CMAKE_CXX_STANDARD 14)

add_executable(B "B - Find.cpp")
add_executable(E "E - Find in Matrix.cpp")
add_executable(Day1_minmax "Day1 - minMaxSum.cpp")
add_executable(Day1_plusminux "Day1 - PlusMinus.cpp")
add_executable(L "L - Colourblindness.cpp")
add_executable(Q "Q - Caps Lock.cpp")
add_executable(AppsA "AppsClub - A.cpp")
add_executable(AppsB "AppsClub - B.cpp")
